--- a/css/style.css
+++ b/css/style.css
@@ -179,7 +179,7 @@ h6,
     left: 0;
     display: flex;
     align-items: center;
-    background: rgba(0, 0, 0, .5);
+    /* background: rgba(0, 0, 0, .5); */
 }
 
 @media (max-width: 768px) {
